# agent_mesh

./: .gitignore  README.md  docker-compose.yml  openapi.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 0001_initial_contract.py  0002_add_runtime_event_types.py  0003_memory_and_guardrails.py  0004_conversation_workflow.py  0005_perf_indexes.py
backend/app/: auth.py  config.py  db.py  main.py  scheduler.py  seed.py  websocket.py
backend/app/api/: agents.py  auth.py  conversations.py  runs.py  stats.py  telegram.py  workflows.py
backend/app/integrations/: __init__.py  telegram_bot.py
backend/app/models/: __init__.py  entities.py
backend/app/runtime/: errors.py  event_emitter.py  graph_builder.py  guardrails.py  memory.py  state.py  tools.py  workflow_runner.py
backend/app/schemas/: __init__.py  contract.py
backend/tests/: test_contract.py  test_runtime.py
docs/: EXTENDING.md  architecture.dot  phase2-runtime-spec.md  phase3-telegram-builder-spec.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/agents/: page.tsx
frontend/app/conversations/: page.tsx
frontend/app/login/: page.tsx
frontend/app/runs/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/workflows/: page.tsx
frontend/components/: session-badge.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  (+8 more)
frontend/lib/: api-client.ts  api-types.ts  types.ts
(+7 files in other folders)
