[project]
name = "agent-mesh-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "alembic>=1.13.0",
  "pydantic>=2.7.0",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",
  "langgraph>=0.2.50",
  "langchain-anthropic>=0.3.0",
  "anthropic>=0.40.0",
  "tavily-python>=0.5.0",
  "tenacity>=9.0.0",
  "python-telegram-bot>=21.7,<22",
  "pytest>=8.2.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that call external APIs"
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
line-length = 120
